RESOLVED FIXED142190
Return disk cache entries from the new disk cache
https://bugs.webkit.org/show_bug.cgi?id=142190
Summary Return disk cache entries from the new disk cache
Anders Carlsson
Reported 2015-03-02 15:18:09 PST
Return disk cache entries from the new disk cache
Attachments
Patch (4.68 KB, patch)
2015-03-02 15:21 PST, Anders Carlsson
koivisto: review+
Anders Carlsson
Comment 1 2015-03-02 15:21:16 PST
WebKit Commit Bot
Comment 2 2015-03-02 15:22:50 PST
Attachment 247703 [details] did not pass style-queue: ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.h:102: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/NetworkProcess/cache/NetworkCache.cpp:373: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 3 2015-03-02 15:24:46 PST
Comment on attachment 247703 [details] Patch r=me
Anders Carlsson
Comment 4 2015-03-02 15:25:39 PST
Note You need to log in before you can comment on or make changes to this bug.