Return disk cache entries from the new disk cache https://bugs.webkit.org/show_bug.cgi?id=142190

Reviewed by Antti Koivisto.

* NetworkProcess/NetworkProcess.cpp:
(WebKit::fetchDiskCacheEntries):
Call NetworkCache::traverse() to get all the cache entries, unique their origins and pass them back with the completion handler.

* NetworkProcess/cache/NetworkCache.cpp:
(WebKit::NetworkCache::traverse):
New helper function that traverses network cache entries.

* NetworkProcess/cache/NetworkCache.h:

Canonical link: https://commits.webkit.org/160230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180899 268f45cc-cd09-0410-ab3c-d52691b4dbfc